# pre-commit-test-t

./: pyproject.toml
.github/workflows/: python-checks.yml
pre_commit_test_t/: test_ci.py
