[tool.poetry]
name = "pre-commit-test-t"
version = "0.1.0"
description = ""
authors = ["jerome drescig <jeromedrescig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
